# murgcam

./: README.md
cad/: print.factory
cad/base_narrow_cam/: lens_holder.scad
cad/ov2640_holder/: ov2640_holder.scad
docs/: gpio_matrix.txt  iic.txt  power_budget.ods
firmware/elkcam_firmware/: CMakeLists.txt  Kconfig  partitions.csv  sdkconfig  sdkconfig.old
firmware/elkcam_firmware/main/: CMakeLists.txt  camhandler.c  camhandler.h  cellmodem.c  cellmodem.h  config.h  configstorage.c  configstorage.h  configstorage_const.h  events.h  gpios.c  gpios.h  httpclient.c  httpclient.h  ina226.c  ina226.h  main.c  webserver.c  webserver.h  wifi.c  wifi.h
firmware/esp32-test/: .bin_timestamp  CMakeCache.txt  Makefile  app-template.elf  app-template.map  cmake_install.cmake  compile_commands.json  config.env  flash_app_args  flash_args.in  flash_bootloader_args  flash_project_args  flasher_args.json  kconfigs.in  kconfigs_projbuild.in  ldgen_libraries  ldgen_libraries.in  partition_table-flash_args  project_description.json
lens_holder/: lens_holder.factory  lens_holder.fcstd
pcb/cam/: cam-cache.lib  cam.kicad_pcb  cam.kicad_pro  cam.kicad_sch  cam.sch  cam.xml
pcb/cam_discreteesp32/: cam  cam-cache.lib  cam.kicad_pcb  cam.kicad_pcb-bak  cam.pro  cam.sch  cam.sch-bak  fp-info-cache
upload_tester/sw/: meta.txt  upload.sh
upload_tester/testcard/: testcard.xcf
web-backend/: upload.php
web-backend/api/: authenticate.php  (+18 more)
web-frontend/: draft.html  index.html
web-if/: .env.development  .env.production  README.md  package-lock.json  package.json  vue.config.js
(+248 files in other folders)
